--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 layout: null
 title: Search
 ---
+<!-- Written by Thada Wangthammang -->
 <html ng-app="app">
 <head>
     <script type="text/javascript" src="{{ site.baseurl }}public/js/angular.min.js"></script>
