--- a/search.html
+++ b/search.html
@@ -35,7 +35,7 @@ title: Search
             console.log($scope.query);
             $scope.posts = [
                 {% for post in site.posts %}
-                {name: '{{ post.title }}',link: '{{ site.url }}{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
+                {name: '{{ post.title }}',link: '{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
                     {% for tag in post.tags %}
                     '{{tag}}',
                     {% endfor %}
