--- a/search.html
+++ b/search.html
@@ -6,18 +6,19 @@ title: Search
 <html ng-app="app">
 <head>
     <script type="text/javascript" src="{{ site.baseurl }}public/js/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
     {% include head.html %}
 	<title>Tags</title>
 </head>
-<body>
+<body ng-controller="ListController">
 {% include sidebar.html %}
 <div class="content container">
     <form class="pure-form">
-      <input ng-model="query" type="text" class="pure-input-rounded pure-input-1" style="font-size: 1.10em;"
+      <input ng-value="search_string" ng-model="query" type="text" class="pure-input-rounded pure-input-1" style="font-size: 1.10em;"
         placeholder="Search keywords" autofocus>
     </form>
 
-    <span ng-controller="ListController">
+    <span>
     	<ul ng-repeat="post in posts | filter:searchMultiTags | orderBy: 'name'">
             <li>//post.date_view// &raquo; <a href="//post.link//">//post.name//</a>
                 <!-- <span ng-repeat="tag in post.tags" class="label space" ng-show="mouseover"><a href="#" title="Pages tagged {{ tag }}" rel="tag">#//tag//</a></span></p> -->
@@ -27,44 +28,95 @@ title: Search
 
     </span>
     <script type="text/javascript">
-        var app = angular.module('app', [], function($interpolateProvider) {
+        var app = angular.module('app', ['ngRoute'], function($interpolateProvider) {
             $interpolateProvider.startSymbol('//');
             $interpolateProvider.endSymbol('//');
         });
-    	function ListController($scope){
-            console.log($scope.query);
+        app.controller('ListController', function($scope, $location) {
+            //  $scope.location = $location;
+
+            var value = $location.$$url;
+            $scope.search_string = unescape(value.substring(1,value.length));
+            console.log($scope.search_string);
+
             $scope.posts = [
-                {% for post in site.posts %}
-                {name: '{{ post.title }}',link: '{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
-                    {% for tag in post.tags %}
-                    '{{tag}}',
-                    {% endfor %}
-                ]},
-                {% endfor %}
-    			// {name: 'mango', tags: ['green', 'oval']},
-    		];
+                 {% for post in site.posts %}
+                 {name: '{{ post.title }}',link: '{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
+                     {% for tag in post.tags %}
+                     '{{tag}}',
+                     {% endfor %}
+                 ]},
+                 {% endfor %}
+     			// {name: 'mango', tags: ['green', 'oval']},
+     		];
+            $scope.$watch('query', function(newValue, oldValue) {
+            //   scope.counter = scope.counter + 1;
+                $location.path(newValue);
+            });
 
-            $scope.searchMultiTags = function(element) {
-                if (typeof $scope.query === 'undefined')return true;
-                processed_query = $scope.query.toLowerCase().trim();
-                tags_array = processed_query.split(' ');
-                processing_tags = element.tags.join(' ');
+             $scope.searchMultiTags = function(element) {
+                 if (typeof $scope.query === 'undefined'){
+                     $scope.query = $scope.search_string;
 
-                if(element.name.toLowerCase().search(processed_query.toLowerCase()) >= 0){
-                    return true;
-                }
-                if(element.category.toLowerCase().search(processed_query.toLowerCase()) >= 0){
-                    return true;
-                }
-                for (var i = 0; i < tags_array.length;i++){
-                    if( processing_tags.search(tags_array[i]) < 0 ) {
-                        return false;
-                    }
-                }
+                     return true;
+                 }
+                 console.log($scope.query);
+                 processed_query = $scope.query.toLowerCase().trim();
+                 tags_array = processed_query.split(' ');
+                 processing_tags = element.tags.join(' ');
 
-                return true;
-            };
-    	}
+                 if(element.name.toLowerCase().search(processed_query.toLowerCase()) >= 0){
+                     return true;
+                 }
+                 if(element.category.toLowerCase().search(processed_query.toLowerCase()) >= 0){
+                     return true;
+                 }
+                 for (var i = 0; i < tags_array.length;i++){
+                     if( processing_tags.search(tags_array[i]) < 0 ) {
+                         return false;
+                     }
+                 }
+
+                 return true;
+             };
+         })
+
+
+    	// function ListController($scope){
+        //     // console.log($scope.query);
+        //     // console.log($routeParams);
+        //     $scope.posts = [
+        //         {% for post in site.posts %}
+        //         {name: '{{ post.title }}',link: '{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
+        //             {% for tag in post.tags %}
+        //             '{{tag}}',
+        //             {% endfor %}
+        //         ]},
+        //         {% endfor %}
+    	// 		// {name: 'mango', tags: ['green', 'oval']},
+    	// 	];
+        //
+        //     $scope.searchMultiTags = function(element) {
+        //         if (typeof $scope.query === 'undefined')return true;
+        //         processed_query = $scope.query.toLowerCase().trim();
+        //         tags_array = processed_query.split(' ');
+        //         processing_tags = element.tags.join(' ');
+        //
+        //         if(element.name.toLowerCase().search(processed_query.toLowerCase()) >= 0){
+        //             return true;
+        //         }
+        //         if(element.category.toLowerCase().search(processed_query.toLowerCase()) >= 0){
+        //             return true;
+        //         }
+        //         for (var i = 0; i < tags_array.length;i++){
+        //             if( processing_tags.search(tags_array[i]) < 0 ) {
+        //                 return false;
+        //             }
+        //         }
+        //
+        //         return true;
+        //     };
+    	// }
     </script>
 
 </div>
