--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,18 @@ layout: page
 title: Notes
 description: "All my notes"
 ---
-
+<h2>Featured Notes</h2>
+ <ul class="posts">
+    {% for post in site.categories['notes'] %}{% if post.featured == true %}
+      <li itemscope>
+        <a href="{{ post.url }}">
+          {{ post.title }}
+        </a>
+        : {{post.description}}
+      </li>
+    {% endif %}{% endfor %}
+  </ul>
+<h2>Archived Notes</h2>
  <ul class="posts">
     {% for post in site.categories['notes'] %}{% if post.title != null %}
       <li itemscope>
