fix search page

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@ title: Search
 <html ng-app="app">
 <head>
     <script type="text/javascript" src="{{ site.baseurl }}public/js/angular.min.js"></script>
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
     {% include head.html %}
 	<title>Tags</title>
 </head>
