--- a/notes.html
+++ b/notes.html
@@ -2,12 +2,13 @@
 layout: page
 title: Notes
 description: "All my notes"
+permalink: notes/
 ---
 <h2>Featured Notes</h2>
  <ul class="posts">
     {% for post in site.categories['notes'] %}{% if post.featured == true %}
       <li itemscope>
-        <a href="{{ post.url }}">
+        <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
         : {{post.description}}
@@ -18,7 +19,7 @@ description: "All my notes"
  <ul class="posts">
     {% for post in site.categories['notes'] %}{% if post.title != null %}
       <li itemscope>
-        <a href="{{ post.url }}">
+        <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
         : {{post.description}}
