--- a/notes.html
+++ b/notes.html
@@ -3,6 +3,7 @@ layout: page
 title: Notes
 description: "All my notes"
 permalink: notes/
+add_menu: true
 ---
 <h2>Featured Notes</h2>
  <ul class="posts">
