--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home
             {% endfor %}
           {% comment %} </p> {% endcomment %}
         </p>
-        {% if post.image != null %}<p><img src="{{ site.baseurl }}/{{ post.image }}"></p>{% endif %}
+        {% if post.image != null %}<p><img alt="{{ post.title }}" src="{{ site.baseurl }}/{{ post.image }}"></p>{% endif %}
         {% comment %} <p> {% endcomment %}
             {% if post.home != null %}<a class="pure-button button-small" href="{{ post.home }}"><i class="fa fa-home"></i>Home</a>{% endif %}
             {% if post.demo != null %}<a class="pure-button button-small" href="{{ post.demo }}"><i class="fa fa-play"></i>Demo</a>{% endif %}
