--- a/editor.html
+++ b/editor.html
@@ -11,12 +11,12 @@ permalink: e/
 
 <h1>Editor</h1> 
 <p>
-    <button class="pure-button" href="#" onclick="load_prototype('note')">
+    <button class="pure-button" onclick="load_prototype('note')">
         <i class="fa fa-sticky-note"></i>
        Note 
     </button>
 
-    <a class="pure-button" href="#" onclick="load_prototype('article')">
+    <a class="pure-button" onclick="load_prototype('article')">
         <i class="fa fa-newspaper-o"></i>
        Article 
     </a>
