--- a/editor.html
+++ b/editor.html
@@ -13,13 +13,13 @@ permalink: e/
 <p>
     <button class="pure-button" onclick="load_prototype('note')">
         <i class="fa fa-sticky-note"></i>
-       Note 
+       Note
     </button>
 
-    <a class="pure-button" onclick="load_prototype('article')">
+    <button class="pure-button" onclick="load_prototype('article')">
         <i class="fa fa-newspaper-o"></i>
-       Article 
-    </a>
+       Article
+    </button>
 </p>
 <textarea id="editor">
 </textarea>
