--- a/search.html
+++ b/search.html
@@ -44,13 +44,13 @@ permalink: search/
 
             $scope.posts = [
                  {% for post in site.posts %}
-                 {name: '{{ post.title }}',description: '{{ post.description }}',link: '{{ site.baseurl }}{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
+
+                 {name: "{{ post.title }}",description: "{{ post.description }}",link: "{{ site.baseurl }}{{ post.url }}", category: "{{ post.category }}", date_view: "{{post.date | date_to_string}}", tags: [
                      {% for tag in post.tags %}
-                     '{{tag}}',
+                     "{{tag}}",
                      {% endfor %}
                  ]},
                  {% endfor %}
-     			// {name: 'mango', tags: ['green', 'oval']},
      		];
 
             $scope.$watch('query', function(newValue, oldValue) {
@@ -88,41 +88,6 @@ permalink: search/
          })
 
 
-    	// function ListController($scope){
-        //     // console.log($scope.query);
-        //     // console.log($routeParams);
-        //     $scope.posts = [
-        //         {% for post in site.posts %}
-        //         {name: '{{ post.title }}',link: '{{ site.baseurl }}{{ post.url }}', category: '{{ post.category }}', date_view: '{{post.date | date_to_string}}', tags: [
-        //             {% for tag in post.tags %}
-        //             '{{tag}}',
-        //             {% endfor %}
-        //         ]},
-        //         {% endfor %}
-    	// 		// {name: 'mango', tags: ['green', 'oval']},
-    	// 	];
-        //
-        //     $scope.searchMultiTags = function(element) {
-        //         if (typeof $scope.query === 'undefined')return true;
-        //         processed_query = $scope.query.toLowerCase().trim();
-        //         tags_array = processed_query.split(' ');
-        //         processing_tags = element.tags.join(' ');
-        //
-        //         if(element.name.toLowerCase().search(processed_query.toLowerCase()) >= 0){
-        //             return true;
-        //         }
-        //         if(element.category.toLowerCase().search(processed_query.toLowerCase()) >= 0){
-        //             return true;
-        //         }
-        //         for (var i = 0; i < tags_array.length;i++){
-        //             if( processing_tags.search(tags_array[i]) < 0 ) {
-        //                 return false;
-        //             }
-        //         }
-        //
-        //         return true;
-        //     };
-    	// }
     </script>
 
 </div>
