fix search page, add more link on footer

--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@ permalink: search/
 </head>
 <body ng-controller="ListController">
 
-<div class="content container">
+<div class="content">
     <form class="pure-form">
       <input ng-value="search_string" ng-model="query" type="text" class="pure-input-rounded pure-input-1" style="font-size: 1.10em;"
         placeholder="Search keywords" autofocus>
