--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 --- 
 layout: default 
-title: Home 
+title: Blog 
 ---
 
 <div class="box">
@@ -49,16 +49,15 @@ title: Home
   {% endfor %}
   <div class="pagination">
       {% if paginator.next_page %}
-      <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">Older</a>
+      <a class="pagination-item older" href="{{ site.baseurl }}/page/{{paginator.next_page}}">Older</a>
       {% else %}
       <span class="pagination-item older">Older</span>
       {% endif %} {% if paginator.previous_page %} {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/">Newer</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}/blog">Newer</a>
       {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/page{{paginator.previous_page}}">Newer</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}/page/{{paginator.previous_page}}">Newer</a>
       {% endif %} {% else %}
       <span class="pagination-item newer">Newer</span>
       {% endif %}
     </div>
 </div>
-
