--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Blog
       {% else %}
       <span class="pagination-item older">Older</span>
       {% endif %} {% if paginator.previous_page %} {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/blog">Newer</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}/">Newer</a>
       {% else %}
       <a class="pagination-item newer" href="{{ site.baseurl }}/page/{{paginator.previous_page}}">Newer</a>
       {% endif %} {% else %}
