--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@ permalink: search/
             <div class="card">
                 <div class="card-content">
                     <!-- //post.date_view// &raquo;  -->
-                    <a href="//post.link//">//post.name//</a>
+                    <a href="//post.link//"><strong>//post.name//</strong></a>
                 <!-- <footer class="card-footer"> -->
                     <div class="tags">
                         <span class="tag is-size-7" ng-repeat="tag in post.tags" id="//tag//">//tag//</span>
