--- a/src/search.html
+++ b/src/search.html
@@ -6,8 +6,8 @@ permalink: search/
 <!-- Written by Thada Wangthammang -->
 <html ng-app="app">
 <head>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/js/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
+    <script async type="text/javascript" src="{{ site.baseurl }}/public/js/angular.min.js"></script>
+    <script async src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
     {% include head.html %}
 	<title>Tags</title>
 </head>
