add new home theme

--- a/src/blog.html
+++ b/src/blog.html
@@ -32,18 +32,11 @@ pagination:
             {% comment %} {% unless forloop.last %} {% endunless %} {% endcomment %} {% endfor %} {% comment %}
           </div> {% endcomment %}
         </p>
-        {% if post.image != null %}
+        <!-- {% if post.image != null %}
         <p>
           <img alt="{{ post.title }}" src="{{ site.baseurl }}/{{ post.image }}">
-        </p>{% endif %} {% comment %}
-        <p> {% endcomment %} {% if post.home != null %}
-          <a class="pure-button button-small" href="{{ post.home }}">
-            <i class="fa fa-home"></i>Home</a>{% endif %} {% if post.demo != null %}
-          <a class="pure-button button-small" href="{{ post.demo }}">
-            <i class="fa fa-play"></i>Demo</a>{% endif %} {% if post.source != null %}
-          <a class="pure-button button-small" href="{{ post.source }}">
-            <i class="fa fa-code"></i>Source code</a>{% endif %} {% comment %} </p>
-        {% endcomment %}
+        </p>{% endif %}  -->
+        
       </div>
       
     </div>
