fix size for tablet

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ title: Home
         <div class="recent-posts" style='background-image: url({{ post.image }})'>
 
           <div class="recent-posts-overlay">
-            <h2 class="recent-post is-size-4-mobile is-size-3">
+            <h2 class="recent-post is-size-4 is-size-3-desktop">
               <a href="{{ site.baseurl }}{{ post.url }}">
                 {{ post.title }}
               </a>
