add nextjs wrapper

--- a/src/search.html
+++ b/src/search.html
@@ -6,7 +6,7 @@ permalink: search/
 <!-- Written by Thada Wangthammang -->
 <html ng-app="app">
 {% include head.html %}
-<script type="text/javascript" src="{{ site.baseurl }}/public/js/angular.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/static/js/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
 <body ng-controller="ListController">
 
