--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,17 @@ layout: default
 title: Home 
 ---
 
+<script type="text/javascript" src="{{ site.baseurl }}/public/js/index.js"></script>
+<script type="text/javascript">
+// <pre>
+window.onload = function(){
+  EntryPoint.dateFromNow() 
+};
+// </pre>
+</script>
 <!-- <h2>Featured post</h2>
 <div class="box">
     <div class="content">
-  
 
         {% for post in site.posts %}
           {% if post.first_page == true %}
@@ -44,7 +51,7 @@ title: Home
                   {{ post.title }}
                 </a>
               </h2>
-              <div class="recent-post is-size-6">{{ post.date | date: "%e %B" }}</div>
+              <div class="recent-post is-size-6 date-format" data-date="{{ post.date | date: "%Y-%m-%d" }}"></div>
 
             </div>
           </div>
