--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home 
 ---
 
-<script type="text/javascript" src="{{ site.baseurl }}/public/js/index.js"></script>
+<script async type="text/javascript" src="{{ site.baseurl }}/public/js/index.js"></script>
 <script type="text/javascript">
 // <pre>
 window.onload = function(){
