reduce thumnail size

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ window.onload = function(){
       <div class="column">
 
           <div class="recent-posts image-load-placeholder recent-posts-size" style='background-image: url(https://ce8be7dec.cloudimg.io/width/80/fgaussian2/{{ post.image }})'>
-            <div class="image-cover recent-posts-size" style='background-image: url({{ post.image }})'>         
+            <div class="image-cover recent-posts-size" style='background-image: url(https://ce8be7dec.cloudimg.io/crop/500x350/q70/{{ post.image }})'>         
             <div class="recent-posts-overlay">
 
               <h2 class="recent-post is-size-5-mobile is-size-4">
