change header font to Prompt

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@ window.onload = function(){
             <div class="image-cover recent-posts-size" style='background-image: url(https://ce8be7dec.cloudimg.io/crop/500x350/q70/{{ post.image }})'>         
             <div class="recent-posts-overlay">
 
-              <h2 class="recent-post is-size-5-mobile is-size-4">
+              <h2 class="recent-post is-size-5-mobile is-size-5-tablet is-size-4-desktop">
                 <a href="{{ site.baseurl }}{{ post.url }}">
                   {{ post.title }}
                 </a>
