redsign blog page

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@ window.onload = function(){
       <div class="column">
 
           <div class="columns is-mobile">
-            <div class="column is-one-fifth">
+              <div class="column is-narrow" style="width: 130px;">
               <span class="is-size-6">{{ post.date | date: "%Y, %b %e" }}</span>
             </div>
             <div class="column">
