fix padding time

--- a/src/blog.html
+++ b/src/blog.html
@@ -12,7 +12,7 @@ pagination:
   <div class="column">
 
       <div class="columns">
-        <div class="column is-narrow" style="width: 130px; padding: 0 0 0 0.75rem;">
+        <div class="column is-narrow" style="width: 130px; padding: 0.75rem 0 0 0.75rem;">
           <span class="is-size-6">{{ post.date | date: "%Y, %b %e" }}</span>
         </div>
         <div class="column">
