--- a/src/blog.html
+++ b/src/blog.html
@@ -12,7 +12,7 @@ pagination:
 
       <div class="columns">
         <div class="column is-narrow" style="width: 130px; padding: 0.75rem 0 0 0.75rem;">
-          <span class="is-size-6" >{{ post.date | date: "%Y, %b %e" }}</span>
+          <span class="is-size-6-desktop is-size-7" >{{ post.date | date: "%Y, %b %e" }}</span>
         </div>
         <div class="column">
             <!-- <div class="tags"> 
@@ -22,7 +22,7 @@ pagination:
                </span>
                {% endfor %}
              </div>  -->
-          <span class="title post-list is-size-5 is-size-6-mobile">
+          <span class="title post-list is-size-6 is-size-5-desktop">
             <a href="{{ site.baseurl }}{{ post.url }}">
                 {% if post.category == "notes" %}<i class="fa fa-sticky-note"></i>{% endif %}
                 {{ post.title }}
