--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@ layout: default
 title: Home 
 ---
 
+<script async type="text/javascript" src="{{ site.baseurl }}/public/js/index.js"></script>
+<script type="text/javascript">
+// <pre>
+window.onload = function(){
+  EntryPoint.dateFromNow() 
+};
+// </pre>
+</script>
 <!-- <h2>Featured post</h2>
 <div class="box">
     <div class="content">
@@ -58,7 +66,7 @@ title: Home
     <div class="columns">
       <div class="column">
 
-          <div class="columns is-mobile">
+          <div class="columns">
               <div class="column is-narrow" style="width: 130px;">
               <span class="is-size-6-desktop is-size-7"">{{ post.date | date: "%Y, %b %e" }}</span>
             </div>
