--- a/src/index.html
+++ b/src/index.html
@@ -1,91 +1,80 @@
---- 
-layout: default 
-title: Home 
+---
+layout: default
+title: Home
 ---
 
 <script async type="text/javascript" src="{{ site.baseurl }}/public/js/index.js"></script>
 <script type="text/javascript">
-// <pre>
-window.onload = function(){
-  EntryPoint.dateFromNow() 
-};
+  // <pre>
+  window.onload = function () {
+    EntryPoint.dateFromNow()
+  };
 // </pre>
 </script>
-<!-- <h2>Featured post</h2>
-<div class="box">
-    <div class="content">
-
-        {% for post in site.posts %}
-          {% if post.first_page == true %}
-            <div class="recent-posts" style='background-image: url({{ post.image }})'>
-              <div class="recent-posts-overlay">
-                <h2 class="recent-post is-size-4 is-size-3-desktop">
-                  <a href="{{ site.baseurl }}{{ post.url }}">
-                    {{ post.title }}
-                  </a>
-                </h2>
-                <div class="recent-post is-size-6">{{ post.date | date: "%e %B" }}</div>
-              </div>
-            </div>
-          {% endif %}
-      {% endfor %}
-
-  </div>
-</div> -->
 
 <h2>Recent posts</h2>
 
 <div class="box">
   <div class="content">
 
-    <div class="columns  is-multiline is-centered">
+
+    <div class="columns is-multiline is-centered">
       {% for post in site.posts limit:6 %}
       <div class="column">
+        <div class="recent-posts-2">
 
-          <div class="recent-posts image-load-placeholder recent-posts-size" style='background-image: url(https://ce8be7dec.cloudimg.io/width/80/fgaussian2/{{ post.image }})'>
-            <div class="image-cover recent-posts-size" style='background-image: url(https://ce8be7dec.cloudimg.io/crop/500x350/q70/{{ post.image }})'>         
-            <div class="recent-posts-overlay">
-
-              <span class="title recent-post is-size-5 is-size-4-desktop" >
-                <a href="{{ site.baseurl }}{{ post.url }}">
-                  {{ post.title }}
-                </a>
-              </span>
-              <div class="recent-post is-size-6 date-format" data-date="{{ post.date | date: "%Y-%m-%d" }}"></div>
+          <div class="image-load-placeholder recent-posts-size-2" style='margin-bottom: 0.6rem; background-image: url(https://ce8be7dec.cloudimg.io/width/80/fgaussian2/{{ post.image }})'>
+            <div class="image-cover recent-posts-size-2" style='background-image: url(https://ce8be7dec.cloudimg.io/crop/500x350/q70/{{ post.image }})'>
 
             </div>
           </div>
+
+          <span class="title is-size-5 is-size-4-desktop">
+            <a href="{{ site.baseurl }}{{ post.url }}">
+              {{ post.title }}
+            </a>
+          </span>
+          <div class="is-size-6 date-format" data-date="{{ post.date | date: "%Y-%m-%d" }}"></div>
         </div>
-
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
-  </div>
 
-  <div style="margin:3rem"></div>
-  {% for post in site.posts offset:6 limit:3 %}
-    <div class="columns">
+
+    <div style="margin:3rem"></div>
+
+    {% for post in site.posts offset:6 limit:3 %}
+    <div class="columns" style="margin: 0;">
       <div class="column">
 
-          <div class="columns">
-              <div class="column is-narrow" style="width: 130px;">
-              <span class="is-size-6-desktop is-size-7"">{{ post.date | date: "%Y, %b %e" }}</span>
-            </div>
-            <div class="column">
-              <span class="title post-list is-size-6 is-size-5-desktop">
-                <a href="{{ site.baseurl }}{{ post.url }}">
-                  {{ post.title }}
-                </a>
-              </span>
+        <div class="columns">
+          <div class="column is-narrow" style="width: 130px; padding: 0.75rem 0 0 0.75rem;">
+            <span class="is-size-6-desktop is-size-7">{{ post.date | date: "%Y, %b %e" }}</span>
+          </div>
+          <div class="column">
+            <span class="title post-list is-size-5 is-size-4-desktop">
+              <a href="{{ site.baseurl }}{{ post.url }}">
+                {% if post.category == "notes" %}<i class="fa fa-sticky-note"></i>{% endif %}
+                {{ post.title }}
+              </a>
+            </span>
+
+            <div class="wrapper">
+              <div class="description is-size-7">{{ post.content| markdownify | strip_html | truncate: 200 }}</div>
             </div>
 
+            {% if forloop.last == false %}
+            <hr style="margin: 1rem 0 0; height: 1px;">{% endif %}
           </div>
-        
+
+        </div>
+
       </div>
     </div>
-  {% endfor %}
 
-  <center><a href="/blog">Read more</a></center>
+    {% endfor %}
 
-</div>
-<hr>
+    <center><a href="/blog">Read more</a></center>
 
+  </div>
+  <hr>
