--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,7 @@ title: Home
 // </pre>
 </script>
 
-<h2>Recent posts</h2>
-
-<div class="box">
-  <div class="content">
-
+<h1>Recent posts</h1>
 
     <div class="columns is-multiline is-centered">
       {% for post in site.posts limit:6 %}
@@ -73,8 +69,8 @@ title: Home
     </div>
 
     {% endfor %}
-
+    <div style="margin:3rem"></div>
     <center><a href="/blog">Read more</a></center>
 
-  </div>
+
   <hr>
