--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ title: Home
 
     <div style="margin:3rem"></div>
 
-    {% for post in site.posts offset:6 limit:3 %}
+    {% for post in site.posts offset:6 limit:4 %}
     <div class="columns" style="margin: 0;">
       <div class="column">
 
@@ -70,7 +70,7 @@ title: Home
 
     {% endfor %}
     <div style="margin:3rem"></div>
-    <center><a href="/blog">Read more</a></center>
+    <center><a href="/blog/page/2/">Read more</a></center>
 
 
   <hr>
