--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@ title: Home
 </script>
 
 <h1>Recent posts</h1>
-
+<div style="margin:3rem"></div>
     <div class="columns is-multiline is-centered">
       {% for post in site.posts limit:6 %}
-      <div class="column">
+      <div class="column" style="margin-bottom:1.75rem;">
         <div class="recent-posts-2">
 
           <div class="image-load-placeholder recent-posts-size-2" style='margin-bottom: 0.6rem; background-image: url(https://ce8be7dec.cloudimg.io/width/80/fgaussian2/{{ post.image }})'>
@@ -25,7 +25,7 @@ title: Home
             </div>
           </div>
 
-          <span class="title is-size-5 is-size-4-desktop">
+          <span class="title is-size-5 is-size-4-fullhd">
             <a href="{{ site.baseurl }}{{ post.url }}">
               {{ post.title }}
             </a>
@@ -37,7 +37,7 @@ title: Home
     </div>
 
 
-    <div style="margin:3rem"></div>
+    <div style="margin:1rem"></div>
 
     {% for post in site.posts offset:6 limit:4 %}
     <div class="columns" style="margin: 0;">
@@ -48,7 +48,7 @@ title: Home
             <span class="is-size-6-desktop is-size-7">{{ post.date | date: "%Y, %b %e" }}</span>
           </div>
           <div class="column">
-            <span class="title post-list is-size-5 is-size-4-desktop">
+            <span class="title post-list is-size-5 is-size-4-fullhd">
               <a href="{{ site.baseurl }}{{ post.url }}">
                 {% if post.category == "notes" %}<i class="fa fa-sticky-note"></i>{% endif %}
                 {{ post.title }}
