--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ title: Home
 <script type="text/javascript">
   // <pre>
   window.onload = function () {
-    EntryPoint.dateFromNow()
+    EntryPoint.default();
   };
 // </pre>
 </script>
