fix search page on mobile

--- a/src/search.html
+++ b/src/search.html
@@ -4,6 +4,11 @@ title: Search
 permalink: search/
 ---
 
-<div id="root"></div>
+<div class="modal">
+    <div class="modal__header"><div class="search-close has-text-right is-size-4"><a href="/" ><i class="fas fa-times"></i></a></div></div>
+    <div class="modal__content"><div id="root"></div></div>
+    <div class="modal__footer"></div>
+</div>
+
 <script type="text/javascript" src="{{ site.baseurl }}/public/js/polyfill.js"></script>
 <script async type="text/javascript" src="{{ site.baseurl }}/public/js/search.js"></script>
