remove pace.js (loading bar)

--- a/src/search.html
+++ b/src/search.html
@@ -4,7 +4,7 @@ title: Search
 permalink: search/
 ---
 
-<div class="modal">
+<div class="modal open">
     <div class="modal__header"><div class="search-close has-text-right is-size-4"><a href="/" ><i class="fas fa-times"></i></a></div></div>
     <div class="modal__content"><div id="root"></div></div>
     <div class="modal__footer"></div>
