--- a/src/search.html
+++ b/src/search.html
@@ -5,7 +5,7 @@ permalink: search/
 ---
 
 <div class="modal open">
-    <div class="modal__header"><div class="search-close has-text-right is-size-4"><a href="/" ><i class="fas fa-times"></i></a></div></div>
+    <div class="modal__header"><div class="search-close has-text-right is-size-4"><a href="#" onclick="window.history.go(-1); return false;"><i class="fas fa-times"></i></a></div></div>
     <div class="modal__content"><div id="root"></div></div>
     <div class="modal__footer"></div>
 </div>
