--- a/src/search-data.html
+++ b/src/search-data.html
@@ -7,7 +7,13 @@ layout: json
   {
     "title": "{{ post.title }}",
     "link": "{{ post.url }}",
-    "date": "{{ post.date }}"
+    "date": "{{ post.date }}",
+    "tags": [
+      {% for tag in post.tags %}
+      "{{ tag }}"
+      {% unless forloop.last %},{% endunless %}
+      {% endfor %}
+      ]
   }
   {% unless forloop.last %},{% endunless %}
   {% endfor %}
