fix container, typography

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@ title: Home
         <span class="title is-size-5 is-size-4-fullhd">
           <!-- <a href="{{ site.baseurl }}{{ post.url }}"> -->
           {{ post.title }}
-
+            
         </span>
       </a>
       <div class="is-size-6 date-format" data-date="{{ post.date | date: "%Y-%m-%d" }}"></div>
@@ -75,7 +75,7 @@ title: Home
 
 {% endfor %}
 <div style="margin:3rem"></div>
-<center><a href="/blog/page/2/">Read more</a></center>
+<center><a href="/blog">Read more</a></center>
 
 
 <hr>
