Change navbar, add toc to sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@ title: Home
 // </pre>
 </script>
 
-<h4>Recent posts</h4>
-<div style="margin:3rem"></div>
+<!-- <div style="margin:3rem"></div> -->
 <div class="columns is-multiline is-centered">
   {% for post in site.posts limit:6 %}
   <div class="column" style="margin-bottom:1.25rem;">
