--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ title: Home
           </div>
         </div>
 
-        <span class="title is-size-5 is-size-4-fullhd">
+        <span class="title is-size-5">
           <!-- <a href="{{ site.baseurl }}{{ post.url }}"> -->
           {{ post.title }}
             
@@ -53,7 +53,7 @@ title: Home
         <span class="is-size-6-desktop is-size-7">{{ post.date | date: "%Y, %b %e" }}</span>
       </div>
       <div class="column">
-        <span class="title post-list is-size-5 is-size-4-fullhd">
+        <span class="title post-list is-size-5">
           <a href="{{ site.baseurl }}{{ post.url }}">
             {% if post.category == "notes" %}<i class="fa fa-sticky-note"></i>{% endif %}
             {{ post.title }}
